--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "//": "INSTALL",
+    "install-client": "npm install --prefix client",
+    "install-server": "npm install --prefix server",
+    "install": "npm run install-client | npm run install-server",
+    "//": "",
+    "//": "",
+    "//": "BUILD",
+    "build-ts-client": "npm run build-ts --prefix client",
+    "build-ts-server": "npm run build-ts --prefix server",
+    "build-ts": "npm run build-ts-client | npm run build-ts-server",
+    "//": "",
+    "//": "",
+    "//": "TEST",
+    "test-server": "npm run test --prefix server",
+    "test": "npm run test-server"
   },
   "keywords": [],
   "author": "",
