--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,8 @@
   "main": "dist/app.js",
   "scripts": {
     "build-ts": "tsc",
-    "build": "webpack",
-    "build-dev": "webpack --config webpack.config.prod.js",
+    "build-dev": "webpack",
+    "build-prod": "webpack --config webpack.config.prod.js",
     "start": "webpack serve"
   },
   "keywords": [],
