attempt compiling GH TS 3

--- a/.github/workflows/chat_app.yaml
+++ b/.github/workflows/chat_app.yaml
@@ -65,5 +65,5 @@ jobs:
       # - run: npm run build-client
       # - run: npm run test
 
-      - name: List Directories
-        run: ls
+      - run: ls client
+      - run: ls server
