--- a/.github/workflows/chat_app.yaml
+++ b/.github/workflows/chat_app.yaml
@@ -58,8 +58,8 @@ jobs:
         with:
           redis-version: ${{ matrix.redis-version }}
 
-      # - run: npm install typescript
-      # - run: npm run install
-      # - run: npm run build-ts
-      # - run: npm run build-client
-      # - run: npm run test
+      - run: npm install typescript
+      - run: npm run install
+      - run: npm run build-ts
+      - run: npm run build-client
+      - run: npm run test
